--- a/index.html
+++ b/index.html
@@ -57,44 +57,44 @@
                 </div>
                 <div class="row services justify-content-md-center text-center">
                     <div class="col-sm-6">
-                        <img src="/images/icons/architecture.png">
+                        <img src="/images/icons/leader.png">
                         <h5>Team Leadership</h5>
                         <p>Cross-functional team leadership is my specialty.<br>I will help you set objectives and KPIs for your internal and external product resources, and lead them to deliver exceptional results on-time and on-budget.</p>
                     </div>
                     <div class="col-sm-6">
-                        <img src="/images/icons/architecture.png">
+                        <img src="/images/icons/strategy.png">
                         <h5>Product Management</h5>
                         <p>Have a product idea, but don’t know how to make it a reality?<br>I will work with you to set a product vision and strategy, and translate that vision into a Lean product roadmap that delivers real value for your customers and your business.</p>
                     </div>
                     <div class="col-sm-6">
-                        <img src="/images/icons/architecture.png">
+                        <img src="/images/icons/design.png">
                         <h5>Experience Design</h5>
-                        <p>fdsfdsfdfsdfsdafjl;sdajf;</p>
+                        <p>Looking for a product experience that your customers will love?<br>I will develop consistent UI standards for your web, mobile, or desktop product, and deliver a clean user experience that delights your users and keeps them coming back for more.</p>
                     </div>
                     <div class="col-sm-6">
-                        <img src="/images/icons/leader.png">
+                        <img src="/images/icons/research.png">
                         <h5>Product Research</h5>
-                        <p>If your product doesn’t solve a real problem, it is likely to fall flat.<br>I can help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
+                        <p>If your product doesn’t solve a real problem, it is likely to fall flat.<br>I will help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
                     </div>
                     <div class="col-sm-6">
-                        <img src="/images/icons/strategy.png">
+                        <img src="/images/icons/architecture.png">
                         <h5>Info Architecture</h5>
-                        <p>Odds are, your product is more complicated than it needs to be. I can evaluate the architecture of your existing website, app, or desktop software, and optimize the flow of information to make it easier for users to accomplish their goals.</p>
+                        <p>Odds are, your product is more complicated than it needs to be. I will evaluate the architecture of your existing website, app, or desktop software, and optimize the flow of information to make it easier for users to accomplish their goals.</p>
                     </div>
                     <div class="col-sm-6">
-                        <img src="/images/icons/strategy.png">
+                        <img src="/images/icons/training.png">
                         <h5>UX Training</h5>
-                        <p>Want to level-up your current product resources?<br>I can train your team on all aspects of user experience; from ideation through research, experience mapping, UX design, prototyping, usability testing, and product delivery.</p>
-                    </div>
-                    <div class="col-sm-12">
-                        <div class="separator"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12 text-center">
-                        </div>
+                        <p>Want to level-up your current product resources?<br>I will train your team on all aspects of user experience; from ideation through research, experience mapping, UX design, prototyping, usability testing, and product delivery.</p>
                     </div>
                 </div>
             </div>
+            <a href="/work.html">
+                <div class="row footer justify-content-center" style="margin-top: 120px;">
+                    <div class="col-sm-">
+                        <h3>Check out some of my work <i class="far fa-arrow-right"></i></h3>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
     <!-- Bootstrap JQuery -->
