--- a/work.html
+++ b/work.html
@@ -22,6 +22,10 @@
     <title>Chad Harbig | Bodybuilding.com</title>
 
     <style>
+        .headline {
+            margin: 80px auto;
+        }
+
     </style>
 </head>
 
@@ -41,13 +45,13 @@
                 </div>
             </div>
             <br>
-            <div class="row gallery">
-                <div class="col-sm-12 text-center">
-                    <h2>Case Studies</h2>
-                    <!--
-                    <p>Descriptive Text</p>
--->
+            <div class="row headline justify-content-center">
+                <div class="col-sm-10 col-md-8 text-center">
+                    <h1 class="text-center">I Love to drive results</h1>
+                    <p>Nothing makes me happier than working with awesome companies to deliver real value to their customers.</p>
                 </div>
+            </div>
+            <div class="row gallery">
                 <div class="col-sm-12 col-md-6">
                     <a href="/work/inssider.html">
                         <div class="mask">
