--- a/work/metageek.html
+++ b/work/metageek.html
@@ -54,7 +54,7 @@
     <div class="container-fluid background">
         <div class="container-fluid wrapper">
 
-            <div class="row topnav fixed-top">
+            <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
                     <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
                 </div>
@@ -62,7 +62,7 @@
                     <div class="nav-links">
                         <a href="/work.html">Work</a>
                         <a href="/files/CH_Resume.pdf">Resume</a>
-                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
+                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                     <h5>Points-of-Sale</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>-MetaGeek’s ecommerce experience was designed to support multiple points-of-sale. A streamlined sales funnel makes it easy for B2C customers to purchase directly from the website, while distributors and resellers can configure bulk orders from a simple online catalog. For customers who have questions about product selection or special pricing, access to sales support is always a click away.
+                    <p>MetaGeek’s ecommerce experience was designed to support multiple points-of-sale. A streamlined sales funnel makes it easy for B2C customers to purchase directly from the website, while distributors and resellers can configure bulk orders from a simple online catalog. For customers who have questions about product selection or special pricing, access to sales support is always a click away.
                     </p>
                 </div>
                 <div class="col-sm-12">
