--- a/work/tvcc.html
+++ b/work/tvcc.html
@@ -20,8 +20,6 @@
     <title>Chad Harbig | TVCC</title>
 
     <script>
-
-
     </script>
 
     <style>
@@ -49,7 +47,6 @@
 
             .jumbotron
         }
-
     </style>
 </head>
 
@@ -57,7 +54,7 @@
     <div class="container-fluid background">
         <div class="container-fluid wrapper">
 
-            <div class="row topnav fixed-top">
+            <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
                     <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
                 </div>
@@ -65,7 +62,7 @@
                     <div class="nav-links">
                         <a href="/work.html">Work</a>
                         <a href="/files/CH_Resume.pdf">Resume</a>
-                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
+                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
             </div>
@@ -113,7 +110,7 @@
                 <div class="col-lg-9">
                     <p>Industrial finishes and detailing were used throughout the project to pay homage to the community's agricultural and industrial traditions.</p>
                 </div>
-                <div class="col-md-8 offset-md-2">
+                <div class="col-sm-10 col-md-8">
                     <img class="img-responsive" src="/images/projects/tvcc/tvcc_paneling.jpg">
                 </div>
                 <div class="col-lg-9">
@@ -125,7 +122,7 @@
                 <div class="col-lg-9">
                     <p>TVCC sits on an "island lot" that is highly visible from all sides. As a result, considerable attention was given to the aesthetic appearance of every facade, including the alley (seen here). </p>
                 </div>
-                <div class="col-md-8 offset-md-2">
+                <div class="col-sm-10 col-md-8">
                     <img class="img-responsive" src="/images/projects/tvcc/tvcc_elevation.jpg">
                 </div>
                 <div class="row frame quote justify-content-center">
