--- a/work/gigmob.html
+++ b/work/gigmob.html
@@ -52,9 +52,9 @@
 
 <body>
     <div class="container-fluid background">
-        <div class="container wrapper">
+        <div class="container-fluid wrapper">
 
-            <div class="row topnav fixed-top">
+            <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
                     <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
                 </div>
@@ -62,7 +62,7 @@
                     <div class="nav-links">
                         <a href="/work.html">Work</a>
                         <a href="/files/CH_Resume.pdf">Resume</a>
-                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
+                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
             </div>
