--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -20,16 +20,18 @@
     <title>Chad Harbig | Bodybuilding.com</title>
 
     <script>
+
+
     </script>
 
     <style>
         #hero {
-            background: url(/images/projects/bbcom/bbcom_responsive.jpg);
+            background: url(/images/projects/bbcom/bbcom_hero.jpg);
             background-size: cover;
         }
 
         .jumbotron h4 {
-            margin-top: 320px;
+            margin-top: 340px;
         }
 
         .jumbotron h1,
@@ -44,6 +46,7 @@
                 margin-left: 20px;
             }
         }
+
     </style>
 </head>
 
@@ -85,6 +88,7 @@
                 </div>
                 <div class="d-none d-md-block col-md-4 offset-md-1 col-lg-3 outcomes">
                     <h5>My Role</h5>
+                    <p>Project Coordinator</p>
                     <p>Lead Experience Designer</p>
                     <p>Information Architect</p>
                     <!--
