--- a/work/metageek.html
+++ b/work/metageek.html
@@ -20,6 +20,8 @@
     <title>Chad Harbig | MetaGeek.com</title>
 
     <script>
+
+
     </script>
 
     <style>
@@ -47,6 +49,7 @@
                 margin-left: 20px;
             }
         }
+
     </style>
 </head>
 
@@ -76,7 +79,12 @@
             <div class="row summary">
                 <div class="col-sm-12 col-md-7 col-lg-8">
                     <h4>Background</h4>
-                    <p></p>
+                    <p>MetaGeek.com saw a decline in many of their eCommerce performance measures following a sitewide refresh in 2015. I worked with MetaGeek's in-house marketing team to identify the root cause of the issue, and to develop a plan to get conversion back on track. In addition, I built a live style guide based on their brand standards, which is currently in use throughout the company.
+                    </p>
+                    <p>
+
+                        Through a series of A/B tests and the introduction of a more modern and streamlined cart experience, we were able to significantly improve conversion. Site updates also reduced the engineering and management overhead of the site, which previously relied on a collection of custom solutions for order fulfillment and inventory management
+                    </p>
                 </div>
                 <div class="d-none d-md-block col-md-4 offset-md-1 col-lg-3 outcomes">
                     <h5>My Role</h5>
