Updated Work text

--- a/work/metageek.html
+++ b/work/metageek.html
@@ -20,8 +20,6 @@
     <title>Chad Harbig | MetaGeek.com</title>
 
     <script>
-
-
     </script>
 
     <style>
@@ -49,7 +47,6 @@
                 margin-left: 20px;
             }
         }
-
     </style>
 </head>
 
@@ -83,14 +80,13 @@
                     </p>
                     <p>
 
-                        Through a series of A/B tests and the introduction of a more modern and streamlined cart experience, we were able to significantly improve conversion. Site updates also reduced the engineering and management overhead of the site, which previously relied on a collection of custom solutions for order fulfillment and inventory management
+                        Conversion was significantly improved through a series of A/B tests, pricing optimization, and the introduction of a more modern and streamlined cart experience. Site updates also reduced the engineering and management overhead of the site, which previously relied on a collection of custom solutions for order fulfillment and inventory management.
                     </p>
                 </div>
                 <div class="d-none d-md-block col-md-4 offset-md-1 col-lg-3 outcomes">
                     <h5>My Role</h5>
                     <p>Product Owner</p>
                     <p>Experience Designer</p>
-                    <p>Front-End Developer</p>
                     <br><br>
                     <h5>Outcomes</h5>
                     <h1>35%</h1>
