--- a/work.html
+++ b/work.html
@@ -46,9 +46,9 @@
             </div>
             <br>
             <div class="row headline justify-content-center">
-                <div class="col-sm-10 col-md-8 text-center">
-                    <h1 class="text-center">I Love to drive results</h1>
-                    <p>Nothing makes me happier than working with awesome companies to deliver real value to their customers.</p>
+                <div class="col-sm-10 col-md-9 text-center">
+                    <h1 class="text-center">I Love to drive real results</h1>
+                    <p>Nothing makes me happier than working with awesome companies to deliver measurable value to their customers through innovative products.</p>
                 </div>
             </div>
             <div class="row gallery">
