--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
 
     <style>
         .headline {
-            margin: 80px auto;
+            margin: 80px auto !important;
         }
 
     </style>
@@ -48,7 +48,7 @@
             <div class="row headline justify-content-center">
                 <div class="col-sm-10 col-md-9 text-center">
                     <h1 class="text-center">I Love to drive real results</h1>
-                    <p>Nothing makes me happier than working with awesome companies to deliver measurable value to their customers through innovative products.</p>
+                    <p>Nothing makes me happier than working with awesome companies to deliver measurable value to their customers through innovative product experiences.</p>
                 </div>
             </div>
             <div class="row gallery">
