Edited Works text

--- a/work.html
+++ b/work.html
@@ -25,6 +25,7 @@
         .headline {
             margin: 80px auto !important;
         }
+
     </style>
 </head>
 
@@ -47,7 +48,7 @@
             <div class="row headline justify-content-center">
                 <div class="col-sm-10 col-md-9 text-center">
                     <h1 class="text-center">I Love to drive real results</h1>
-                    <p>Nothing makes me happier than working with awesome companies to deliver measurable value to their customers, through innovative product experiences.</p>
+                    <p>Nothing makes me happier than working with awesome companies to deliver innovative product experiences that create measurable value for their customers</p>
                 </div>
             </div>
             <div class="row gallery">
