--- a/work.html
+++ b/work.html
@@ -47,8 +47,9 @@
             <br>
             <div class="row headline justify-content-center">
                 <div class="col-sm-10 col-md-9 text-center">
-                    <h1 class="text-center">I Love to drive real results</h1>
-                    <p>Nothing makes me happier than working with awesome companies to deliver innovative product experiences that create measurable value for their customers</p>
+                    <h1 class="text-center">I Love to create products that drive real results</h1>
+                    <p>Nothing makes me happier than working with awesome companies to deliver innovative product experiences that create measurable value for their customers.<br><strong> </strong>
+                    </p>
                 </div>
             </div>
             <div class="row gallery">
