Updated headline text on Work

--- a/work.html
+++ b/work.html
@@ -25,7 +25,6 @@
         .headline {
             margin: 80px auto !important;
         }
-
     </style>
 </head>
 
@@ -47,7 +46,7 @@
             <br>
             <div class="row headline justify-content-center">
                 <div class="col-sm-10 col-md-9 text-center">
-                    <h1 class="text-center">I Love to create products that drive real results</h1>
+                    <h1 class="text-center">I Love creating products that drive real results</h1>
                     <p>Nothing makes me happier than working with awesome companies to deliver innovative product experiences that create measurable value for their customers.<br><strong> </strong>
                     </p>
                 </div>
