Updated text on index page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="col-sm-6">
                         <img data-src="/images/icons/research.png">
                         <h5>Product Research</h5>
-                        <p>If your product doesn’t solve a real problem, it is likely to fall flat.<br>I will help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
+                        <p>If your product doesn’t solve a real problem, it's likely to fall flat.<br>I will help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
                     </div>
                     <div class="col-sm-6">
                         <img data-src="/images/icons/architecture.png">
