Fixed webfonts references

--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="/styles/set2.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter|Montserrat:300,500,600|Open+Sans:300,500,600" rel="stylesheet">
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/regular.css" integrity="sha384-tYZB+BP2inzRg01pQhSlW4Tloc0ULXYGiBaf5kSB5Tb3+l84bJy+PKerqziKz3iv" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/light.css" integrity="sha384-PWGGmWk9+xVydf1Gzso0ouaikBBKLu4nCY52q+tBUMq5iXmRhpgTuDkjbtxZ1rXT" crossorigin="anonymous">
