--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="row headline">
                     <div class="col-sm-12 justify-content-md-center text-center">
                         <h1 class="text-center">Let's work together to deliver your next product innovation</h1>
-                        <p>Whether you're a scrappy startup trying to validate your amazing product idea,<br> or an established company that wants to stay relevent in a changing market, <br><strong>I've got the skills and expertise to help you accomplish your goals.</strong></p>
+                        <p>Whether you're a scrappy startup trying to validate your amazing product idea,<br> or an established company that wants to stay relevant in a changing market, <br><strong>I've got the skills and expertise to help you accomplish your goals.</strong></p>
                     </div>
                 </div>
                 <div class="row services justify-content-md-center text-center">
