--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -70,7 +70,7 @@
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
                         <a href="/work.html">Work</a>
-                        <a href="/files/CH_Resume.pdf">Resume</a>
+                          <!--<a href="/files/CH_Resume.pdf">Resume</a>--> 
                         <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
