--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
-                    <img data-src="/images/logos/brigade_logo.png">
+                    <object data="images/logos/brigade_logo.svg" height="35"></object>
                 </div>
                 <div class="col-sm-12 col-md-8">
                     <div class="nav-links">
